# SyncAudioPlayer

./: .gitignore  README.md  local.properties  settings.gradle.kts
app/src/main/cpp/: BufferInfo.h  CMakeLists.txt  SafeQueue.cpp  SafeQueue.h  SyncPalyerJNI.cpp  SyncPlayer.cpp  SyncPlayer.h  log.h  native-lib.cpp  reader.h
app/src/main/cpp/oboe/: CMakeLists.txt
app/src/main/cpp/oboe/include/: AudioClock.h  AudioStream.h  AudioStreamBase.h  AudioStreamBuilder.h  AudioStreamCallback.h  Definitions.h  FifoBuffer.h  FifoControllerBase.h  FullDuplexStream.h  LatencyTuner.h  Oboe.h  OboeExtensions.h  ResultWithValue.h  StabilizedCallback.h  Utilities.h  Version.h
app/src/main/cpp/oboe/src/aaudio/: AAudioExtensions.h  AAudioLoader.cpp  AAudioLoader.h  AudioStreamAAudio.cpp  AudioStreamAAudio.h
app/src/main/cpp/oboe/src/common/: AdpfWrapper.cpp  AdpfWrapper.h  AudioSourceCaller.cpp  AudioSourceCaller.h  AudioStream.cpp  AudioStreamBuilder.cpp  DataConversionFlowGraph.cpp  DataConversionFlowGraph.h  FilterAudioStream.cpp  FilterAudioStream.h  LatencyTuner.cpp  OboeExtensions.cpp  QuirksManager.cpp  QuirksManager.h  README.md  SourceI16Caller.h  SourceI24Caller.cpp  SourceI24Caller.h  SourceI32Caller.h  StabilizedCallback.cpp  Trace.cpp  Trace.h  Utilities.cpp  Version.cpp
app/src/main/cpp/oboe/src/fifo/: FifoBuffer.cpp  FifoController.cpp  FifoController.h  FifoControllerBase.cpp  FifoControllerIndirect.h
app/src/main/cpp/oboe/src/flowgraph/: ChannelCountConverter.cpp  ClipToRange.h  FlowGraphNode.cpp  FlowGraphNode.h  FlowgraphUtilities.h  Limiter.cpp  Limiter.h  (+21 more)
(+70 files in other folders)
